# CaptainPassword

./: .gitignore  ANALYSIS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: package-macos-dmg.sh
src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  windowDrag.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/styles/: base.css  tokens.css  typography.css
