[package]
name = "captain-password"
version = "0.1.2"
description = "Local password vault desktop app"
authors = ["zhangya"]
license = ""
repository = "https://github.com/heihuzicity-tech/CaptainPassword"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
arboard = "3.6"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.3.2"
